src/index.css
body {
  background-color: #000000;
  font-family: 'Fira Code', monospace;
  margin: 0;
  padding: 0;
}

:root {
  --backdrop: #212121;
  --font-stack: 'Fira Code', monospace;
  --theme-grey: #585858;
  --theme-orange: #FFA749;
}

html {
  font-size: 12px;
  margin: 0;
  padding: 0;
}

.App {
  display: grid;
  grid-template-columns: 1fr;
  padding: 5vh 10vw 0 10vw;
  max-width: 80vw;
}

.profile {
  background-color: var(--backdrop);
  border-radius: 20px;
  width: 72vw;
  display: grid;
  position: relative;
  grid-template-columns: 1fr;
  font-weight: 700;
  padding: 2vh 4vw;
  align-items: center;
}

.profile-mobile-spacer {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 10vw;
  margin-bottom: 1vh;
}

.profile-picture {
  width: 25vw;
}

.profile-grid {
  display: none;
}

.profile-grid-expanded {
  display: inline-flex;
  width: 60vw;
  gap: 4vw;
  padding-left: 6vw;
  padding-right: 6vw;
  padding-top: 2vh;
  align-items: center;
}

.profile-item-image {
  width: 10vw;
}

.profile-item-description {
  margin: 0;
  padding: 0;
  text-align: left;
  overflow-x: scroll;
  white-space: nowrap;
  color: white;
  font-size: 0.78rem;
  font-weight: 700;
  min-width: 10vw;
}

.hr-profile {
  display: none;
}

.name {
  color: white;
  text-align: left;
  font-size: 2rem;
}

.resume-button {
  all: unset;
  display: block;
  font-size: 1.2rem;
  padding-top: 0.8vh;
  padding-bottom: 0.8vh;
  width: 72vw;
  background-color: var(--theme-orange);
  color: white;
  font-weight: 600;
  border-radius: 10px;
  margin-top: 1vh;
}

.profile-links-container {
  display: none;
}

.profile-links-container-expanded {
  display: flex;
  justify-content: center;
  padding-top: 2vh;
  gap: 4vw;
}

.profile-links>img {
  height: 3vh;
}

.main-content {
  background-color: var(--backdrop);
  border-radius: 20px;
  width: 80vw;
  position: relative;
  margin-top: 2vh;
  padding-bottom: 2vh;
  margin-bottom: 15vh;
}

.content-title {
  color: white;
  text-align: center;
  font-size: clamp(2.5rem, 1vw, 3.5rem);
  padding-top: 1.5vh;
  padding-left: 2vw;
  padding-right: 2vw;
  margin: 0;
}

.hr-content {
  border: 2px solid var(--theme-orange);
  border-radius: 5px;
  width: 30%;
  padding-left: 2vw;
  padding-right: 2vw;
  margin-top: 1vh;
}

.about-description {
  color: white;
  text-align: left;
  font-size: clamp(1.3rem, 1vw, 2rem);
  padding-left: 5vw;
  padding-right: 5vw;
  padding-top: 2vh;
  margin: 0;
  line-height: 1.5;
}

.skills-title {
  color: white;
  text-align: left;
  font-size: clamp(2rem, 1vw, 3rem);
  margin-top: 2vh;
  padding-left: 5vw;
}

.skill-image {
  width: 33.5vw;
  border-radius: 15px;
}

.skills-section {
  display: flex;
  gap: 3vw;
  margin-left: 5vw;
  margin-right: 5vw;
  margin-top: 2vh;
  overflow-x: auto;
  align-items: center;
}

.navbar {
  display: flex;
  position: fixed;
  left: 5vw;
  right: 0;
  bottom: 2vh;
  border-radius: 40px;
  font-size: clamp(1rem, 1vw, 1.3rem);
  background-color: var(--theme-grey);
  box-shadow: rgba(0, 0, 0, 0.50) 30px 2px 30px;
  width: 90vw;
  z-index: 1000;
}

.nav-link {
  color: white;
  text-decoration: none;
  width: 22.5vw;
  line-height: 6vh;
  text-align: center;
}

.nav-link-active {
  background-color: var(--theme-orange);
  color: white;
  text-decoration: none;
  width: 22.5vw;
  line-height: 6vh;
  text-align: center;
  font-weight: 700;
}

.navbar .nav-link-active:first-child {
  border-radius: 40px 0 0 40px;
}

.navbar .nav-link-active:last-child {
  border-radius: 0 40px 40px 0;
}

.more-details {
  display: block;
  position: absolute;
  top: 0;
  right: 0;
}

.articles-container {
  display: flex;
  flex-direction: column;
  gap: 2vh;
  padding: 4vh 5vw;
  overflow-x: auto;
}

.article {
  background-color: var(--theme-grey);
  padding: 1vh 5vw;
  height: 20vh;
  color: white;
  text-align: left;
  border-radius: 20px;
}

.article>h2 {
  font-size: 1.4rem;
}

.article-description {
  height: 10vh;
}

.overlay-shadow {
  /* display: none; */
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: #00000053;
  z-index: 1000;
}

.expanded-article {
  /* display: none; */
  display: block;
  position: fixed;
  width: 72vw;
  height: 90vh;
  top: 4vh;
  left: 10vw;
  border-radius: 40px;
  z-index: 1000;
  background-color: var(--theme-grey);
  padding: 1vh 4vw 1vh 4vw;
  overflow-y: scroll;
  color: white;
  text-align: left;
}

.expanded-article>.cross {
  position: fixed;
  top: 6vh;
  right: 13vw;
}

.read-more {
  font-weight: 600;
}

.read-more:hover {
  cursor: pointer;
}

.article-description ::-webkit-scrollbar {
  height: 0;
}

.dropdown {
  display: none;
}

.projects-grid {
  display: flex;
  flex-wrap: nowrap;
  flex-direction: row;
  gap: 2vw;
  width: 72vw;
  padding: 3vh 0vw 2vh 0vw;
  margin-left: 4vw;
  overflow-x: auto;
  scroll-snap-type: x mandatory;
  scrollbar-width: none;

  ::webkit-scrollbar {
    height: 0;
  }
}

.project-card {
  background-color: #D9D9D9;
  border-radius: 15px;
  padding: 0vh 0vw;
  width: 72vw;
  height: 45vh;
  position: relative;
  scroll-snap-align: start;
}

.descriptiton-section {
  position: absolute;
  bottom: 0;
  width: 66vw;
  padding: 0vh 3vw;
  border-radius: 0px 0px 15px 15px;
  background-color: var(--theme-grey);
}

.project-title {
  width: 100%;
  height: 3vh;
  color: white;
  font-size: 1.5rem;
  font-weight: 700;
  text-align: center;
  padding-top: 2vh;
}

.descriptiton-section>hr {
  background-color: #D9D9D9;
  border-radius: 10px;
  width: 25%;
  height: 2px;
  border: 0;
}

.project-image {
  width: 72vw;
  border-radius: 15px 15px 0 0;
}

.project-description {
  color: white;
  text-align: justify;
  padding-left: 1.2vw;
  padding-top: 1vh;
  margin-bottom: 3vh;
  padding-right: 1.2vw;
  font-size: 1rem;
}
/* ... */

